[package]
name = "tags-rs"
authors = ["Robert Paul <contact@robertpaul.dev>"]
version = "0.2.0"
edition = "2021"
description = "A CLI for adding tags to files for organization."
homepage = "https://github.com/rp50/tags-rs"
repository = "https://github.com/rp50/tags-rs"
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
dirs = "5.0.1"
serde = "1.0.203"
serde_json = "1.0.117"
